@@ -224,6 +224,8 @@ public class VertexImpl implements org.apache.tez.dag.app.dag.Vertex, EventHandl
   volatile LinkedHashMap<TezTaskID, Task> tasks = new LinkedHashMap<TezTaskID, Task>();
   private Object fullCountersLock = new Object();
   private TezCounters fullCounters = null;
+  private TezCounters cachedCounters = null;
+  private long cachedCountersTimestamp = 0;
   private Resource taskResource;
 
   private Configuration vertexConf;
@@ -1080,6 +1082,34 @@ public class VertexImpl implements org.apache.tez.dag.app.dag.Vertex, EventHandl
       TezCounters counters = new TezCounters();
       return incrTaskCounters(counters, tasks.values());
 
+    } finally {
+      readLock.unlock();
+    }
+  }
+
+  @Override
+  public TezCounters getCachedCounters() {
+    readLock.lock();
+
+    try {
+      // FIXME a better lightweight approach for counters is needed
+      if (fullCounters == null && cachedCounters != null
+          && ((cachedCountersTimestamp+10000) > System.currentTimeMillis())) {
+        LOG.info("Asked for counters"
+            + ", cachedCountersTimestamp=" + cachedCountersTimestamp
+            + ", currentTime=" + System.currentTimeMillis());
+        return cachedCounters;
+      }
+
+      cachedCountersTimestamp = System.currentTimeMillis();
+      if (inTerminalState()) {
+        this.mayBeConstructFinalFullCounters();
+        return fullCounters;
+      }
+
+      TezCounters counters = new TezCounters();
+      cachedCounters = incrTaskCounters(counters, tasks.values());
+      return cachedCounters;
     } finally {
       readLock.unlock();
     }
